# hobbit

./: .gitignore  README.FIRST  README.md  hobbit_params.yaml  make.sh
aal_service/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
aal_service/launch/: params.yaml  params1.yaml  params2.yaml  params3.yaml  params4.yaml  params5.yaml  startup.launch
aal_service/src/: AalServ.py  lampoff.sh  lampon.sh  oriAalServ.py  test_blink.py  test_joystop.py  tst.py
arm_simulation/: CMakeLists.txt  package.xml  setup.py
arm_simulation/data/: Arm_BG_SLDASM.URDF  Hobbit.env.xml  Hobbit.robot.xml  urdf.rviz
arm_simulation/launch/: display.launch
arm_simulation/src/: GraspFromFloorTrajectoryActionServer.py  GraspTrajectoryActionClient.py  GraspTrajectoryActionClientTest.py  graspFromFloorTestHobbitPT2.py  hobbitPT2_ik6d.py
client_test/: CMakeLists.txt  package.xml
client_test/launch/: startup.launch
client_test/src/: client.cpp
decision_service/: CMakeLists.txt  package.xml  setup.py
decision_service/launch/: startup.launch
decision_service/srv/: AppendRules.srv  CreateEngine.srv  DisposeEngine.srv  EngineExists.srv  Evaluate.srv  GetAllGlobalProfileAttributesWithPrefix.srv  GetError.srv  GetGlobalProfileBoolAttribute.srv  GetGlobalProfileNumberAttribute.srv  GetGlobalProfileStringAttribute.srv  GetProfileAttributesWithPrefix.srv  GetProfileBoolAttribute.srv  GetProfileNumberAttribute.srv  GetProfileStringAttribute.srv  LoadProfile.srv  SaveProfile.srv  SetBoolConditional.srv  SetGlobalBoolConditional.srv  SetGlobalNumberConditional.srv  SetGlobalStringConditional.srv  SetNumberConditional.srv  SetStringConditional.srv
decision_service/testfiles/: InitializationPhase.txt  example1.txt  example2.txt  example3.txt  example4.txt  initialization.txt  profile.txt
emergency_detector/: CMakeLists.txt  package.xml  run_it.sh
emergency_detector/launch/: emergency_detector.launch
emergency_detector/msg/: EmergencyMessage.msg  SkeletonBBox.msg
emergency_detector/scripts/: runExp.sh  startEmergencyDetector.sh
emergency_detector/src/: classifier.cpp  classifier.h  fall_detection.cpp  fall_detection.h  main.cpp  process.cpp  process.h  tools.cpp  tools.h  visualization.cpp  visualization.h
emergency_detector/srv/: TriggerEmergency.srv
face_detection/: CMakeLists.txt  package.xml
face_detection/launch/: face_detection.launch
face_detection/scripts/: startFaceDetector.sh
face_detection/src/: FaceDetection.cpp  FaceDetection.h  calibration.c  main.cpp  services.cpp  services.h
fitness_coordinator/: CMakeLists.txt  package.xml
fitness_coordinator/launch/: fitness_coordinator.launch
fitness_coordinator/scripts/: startFitnessCoordinator.sh
fitness_coordinator/src/: main.cpp  process.cpp  process.h  recognize_excercise.cpp  recognize_excercise.h  recognize_pose.cpp  recognize_pose.h
follow_user/: CMakeLists.txt  package.xml
follow_user/launch/: follow_user.launch  follow_user_HeadCamera.launch
follow_user/msg/: CameraMotion.msg  Person.msg  TrackerTarget.msg
follow_user/src/: PeopleTracker.h  main.cpp  pose.cpp  pose.h  services.cpp  services.h
get_current_room/: CMakeLists.txt  package.xml
get_current_room/launch/: places.xml  startup.launch
get_current_room/src/: GetCurrentRoom.cpp  cGetCurrentRoom.cpp
grasp_success_eval/: CMakeLists.txt  package.xml
grasp_success_eval/src/: checkGrasping.h  eArmActionClient.py  graspSuccessEval.cpp  graspSuccessEvalServer.cpp
hand_gestures/: CMakeLists.txt  package.xml
hand_gestures/launch/: hand_gestures.launch  skeleton_detector.launch
hand_gestures/msg/: HandGesture.msg  Skeleton2D.msg
hand_gestures/src/: HobbitTrackerLib.h  main.cpp  services.cpp  services.h
head/: CMakeLists.txt  package.xml
head/launch/: startup.launch  startup_xpc2.launch
head/src/: headmove.py  headmove_xpc2.py
head/srv/: HeadState.srv
hobbit_launch/: CMakeLists.txt  manifest.xml
hobbit_launch/launch/: activateHobbitAutomaticStartup.sh  base_camera_xpc2.launch  basecam.launch  basecam_xpc2_hydro.launch  disableHobbitAutomaticStartup.sh  doMapping  headcam_xpc2_hydro.launch  hobbit.desktop  hobbit.launch  hobbitPT2.desktop  hri.desktop  hri2016.sh  initMira.sh  initializeHobbit.sh  initializeHobbitInstallation.sh  initialize_after_initial_setup.sh  openroswindows_CVRL  openroswindows_XPC  openroswindows_XPC2_beforeSpeech  openroswindows_XPC2_before_screen_terminals  startHobbitPT2.sh  startupBlueDanubeHead.sh  startupHobbitPT1.sh  startupHobbitPT2.sh  startup_all.launch  startup_all_xpc2.launch  switchMira.hri.sh  switchMira.sh  top_camera.launch  top_camera_xpc2.launch
hobbit_launch/scripts/: .bash_hobbit_config  killros.sh  miracenter_screenshot.sh
hobbit_msgs/: CMakeLists.txt  package.xml  setup.py
hobbit_msgs/action/: ApproachUser.action  ArmServer.action  BringObject.action  CalcGraspPointsServer.action  CallUser.action  EndUserInteraction.action  FollowMe.action  GeneralHobbit.action  GraspTrajectoryServer.action  LocateUser.action  StablePointingDirection.action
hobbit_msgs/msg/: Command.msg  Event.msg  Fitness.msg  Object.msg  ObjectLocation.msg  ObjectLocationVector.msg  ObjectPosition.msg  Objects.msg  Parameter.msg  Place.msg  PlacesVector.msg  Point2D.msg  Pose2DStamped.msg  Room.msg  RoomsVector.msg  Status.msg
hobbit_msgs/srv/: AddObject.srv  ChargeCheck.srv  ClustersOnPlane.srv  GetCoordinates.srv  GetDockState.srv  GetObjectLocations.srv  GetOccupancyGrid.srv  GetOccupancyState.srv  GetPose.srv  (+14 more)
hobbit_smach/: CMakeLists.txt  muc.yaml  no_muc.yaml  package.xml  setup.py
interfaces_mira/: CMakeLists.mira  CMakeLists.txt  README  package.xml
localization_recovery/: CMakeLists.txt  package.xml
mira_msgs/: CMakeLists.txt  package.xml
new_layers/: CMakeLists.txt  costmap_plugins.xml  mainpage.dox  package.xml
person_aggregator/: CMakeLists.txt  package.xml
places_interpretation/: CMakeLists.txt  package.xml
places_learning/: CMakeLists.txt  package.xml
rgbd_acquisition/: CMakeLists.txt  checkNewVersion.sh  lastbuild.txt  linkToRGBDAcquisitionLib.sh  package.xml  test.sh
(+925 files in other folders)
