<package>

  <name>aal_service</name>
  <version> 0.0.0</version>
  <description>Hobbit AAL service</description>
  <maintainer email="mayer@fortec.tuwien.ac.at">Peter Mayer</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/aal_service</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_msgs</build_depend>

</package>


