<package>

  <name>arm_simulation</name>
  <version> 0.1.0</version>
  <description> simulation of the arm movement of hobbit PT2 with OpenRAVE</description>
  <maintainer email="fischinger@acin.tuwien.ac.at">David Fischinger</maintainer>
  <license>BSD</license>
  <url>tbd</url>

  <!--build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend-->

</package>


