<package>

  <name>head</name>
  <version> 0.0.0</version>
  <description> head</description>
  <maintainer email="someone@todo.todo">someone</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/head</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

</package>


