<package>

  <name>hobbit_msgs</name>
  <version> 0.0.0</version>
  <description> hobbit_msgs</description>
  <maintainer email="someone@todo.todo">someone</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/hobbit_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>pcl</run_depend>

  <build_depend>nav_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>

</package>


