<?xml version="1.0"?>
<package>
  <name>mira_msgs</name>
  <version>0.0.0</version>
  <description>Messages using the MIRA framework.</description>

  <maintainer email="cburbridge@gmail.com">cburbridge</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>

</package>


